k8s/gtcd/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gtcd
  labels:
    app: gtcd
spec:
  type: ClusterIP
  selector:
    app: gtcd
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
